# Bio-data-aws

./: README.md  app.py  bouncer_store.duckdb  demo.ipynb  presentation.html  pyproject.toml
bouncer/: __init__.py  api.py
bouncer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bouncer/features/: __init__.py  builder.py  store.py
bouncer/parsers/: __init__.py  ct_export.py  protocol.py  samplesheet.py  schema.py
bouncer/qc/: __init__.py  engine.py  finding.py  report.py
bouncer/qc/checks/: __init__.py  cross_file.py  ct_export.py  design.py  ntc.py  reference_genes.py  samplesheet_checks.py
qPCR/correct/: Ct.csv  samplesheet-qpcr - correct.csv
qPCR/incorrect/: samplesheet-qpcr - incorrect.csv
schema/: basic-schema.yaml
